--- a/src/Components/MethodToggle/MethodToggle.css
+++ b/src/Components/MethodToggle/MethodToggle.css
@@ -11,7 +11,7 @@
   }
 }
 
-label input {
+.label100 {
   width: 100%;
 }
 
