--- a/src/Components/Table/Table.css
+++ b/src/Components/Table/Table.css
@@ -17,8 +17,10 @@ table, th, td {
     border: 1px solid black;
 }
 
-#table {
+
+.tab-content {
 overflow-y: auto;
 overflow-x: auto;
-height: calc(100vh - 80px);
+height: calc(100vh - 150px);
+width: 100%;
 }
